# deeplab_ros

./: README.md
Img_seg_ros/: CMakeLists.txt  package.xml  predict.py  run.launch
Img_seg_ros/datasets/: cityscapes.py
Img_seg_ros/network/backbone/: mobilenetv2.py  resnet.py
